@@ -2,6 +2,16 @@ SVN $Id$
 SVN $URL$
 ===============================================================================
 Tag Creator: mlevy
+Developers:  mlevy
+Tag Date:    15 Dec 2014
+Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20141215
+Tag Summary: Bugfix - variables used as array indices were cast as reals
+             rather than ints
+
+Files Modified:
+M       source/ecosys_share.F90
+===============================================================================
+Tag Creator: mlevy
 Developers:  andre
 Tag Date:    5 Dec 2014
 Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20141205
